--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <title>SBA2</title>
   </head>
   <body>
+    <header>
+      <nav id="top-menu"></nav>
+    </header>
     <div class="Container">
       <form id="form" action="/">
         <h1>Registration</h1>
